<resources>
    <string name="app_name">Creation Edge</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Searchâ€¦</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="action">ACTION</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="added">Added %s</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_country_invalid">Your country is invalid</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="amex_short">Amex</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bt_add_card">Add card</string>
    <string name="bt_cancel">@android:string/cancel</string>
    <string name="bt_card_details">Card Details</string>
    <string name="bt_card_not_accepted">Card not accepted</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_cardholder_name_required">Cardholder name is required</string>
    <string name="bt_cid">CID</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_confirm_enrollment">Confirm Enrollment</string>
    <string name="bt_country_code_invalid">Country code is invalid</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cvn">CVN</string>
    <string name="bt_cvv">CVV</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_delete_confirmation_description">You will no longer be able to use this payment method in this app.</string>
    <string name="bt_delete_confirmation_title">Delete payment method?</string>
    <string name="bt_descriptor_amex">Amex</string>
    <string name="bt_descriptor_diners">Diners</string>
    <string name="bt_descriptor_discover">Discover</string>
    <string name="bt_descriptor_google_pay">Google Pay</string>
    <string name="bt_descriptor_hiper">Hiper</string>
    <string name="bt_descriptor_hipercard">Hipercard</string>
    <string name="bt_descriptor_jcb">JCB</string>
    <string name="bt_descriptor_maestro">Maestro</string>
    <string name="bt_descriptor_mastercard">MasterCard</string>
    <string name="bt_descriptor_pay_with_venmo">Venmo</string>
    <string name="bt_descriptor_paypal">PayPal</string>
    <string name="bt_descriptor_unionpay">UnionPay</string>
    <string name="bt_descriptor_unknown">Credit or Debit Card</string>
    <string name="bt_descriptor_visa">Visa</string>
    <string name="bt_done">Done</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_cardholder_name">Cardholder Name</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_mobile_number_invalid">Mobile number is invalid</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>
    <string name="bt_month">Month</string>
    <string name="bt_next">Next</string>
    <string name="bt_other">Other</string>
    <string name="bt_postal_code_invalid">Postal code is invalid</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_recent">Recent</string>
    <string name="bt_save_card_checkbox_name">Save card</string>
    <string name="bt_scan_with_card_io">Scan with card.io</string>
    <string name="bt_select_payment_method">Select Payment Method</string>
    <string name="bt_sms_code">SMS Code</string>
    <string name="bt_sms_code_required">SMS code is required</string>
    <string name="bt_sms_code_sent_to">Enter the SMS code sent to %s</string>
    <string name="bt_unionpay_mobile_number_explanation">Enrollment may be required for this card. An SMS code will be sent to this number if required.</string>
    <string name="bt_unionpay_sms_code_invalid">SMS code is invalid</string>
    <string name="bt_use_a_different_phone_number">Use a different phone number</string>
    <string name="bt_vault_manager_delete_failure">We couldn\'t delete your payment method right now, try again later</string>
    <string name="bt_vault_manager_title">Edit Saved</string>
    <string name="bt_year">Year</string>
    <string name="cancel">Cancel</string>
    <string name="carbon_rowsPerPage">Rows per page:</string>
    <string name="card_network">Card Network</string>
    <string name="card_number_hint">1234 1234 1234 1234</string>
    <string name="challInfoText">Verification code</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="todo">Todo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass">Password</string>
    <string name="emaill">Email</string>
</resources>