<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/product_image"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_rating"
            android:layout_toRightOf="@+id/product_image"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/product_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/product_image"
            android:clickable="false"
            android:numStars="5" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_info">

        <LinearLayout
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/product_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"
            android:text="@string/add_to_cart"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buyNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/buy_now"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</RelativeLayout>
